--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "tsnd --ignore-watch node_modules --transpile-only ./src/server.ts"
+    "start": "tsnd --ignore-watch node_modules --transpile-only ./src/server.ts",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
   },
@@ -16,6 +18,7 @@
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "uuid": "^8.3.1"
   }
 }
