--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
